force-app/main/default/objects/Welcome_Call_Header__c/Welcome_Call_Header__c.object-meta.xml
<CustomObject>
    <label>Welcome Call Header</label>
    <nameField>
        <label>Welcome Call Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WelcomeCallHeaders</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>