force-app/main/default/objects/Welcome_Call_Header__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Welcome Call History</relationshipLabel>
    <relationshipName>WelcomeCallHeaders</relationshipName>
    <type>Lookup</type>
</CustomField>