force-app/main/default/objects/Welcome_Call_Header__c/fields/Call_Disposition_L4__c.field-meta.xml
<CustomField>
    <fullName>Call_Disposition_L4__c</fullName>
    <label>Call Disposition L4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Only asked for site address</fullName>
            </value>
            <value>
                <fullName>Customer mentioned Newspaper</fullName>
            </value>
            <value>
                <fullName>Customer mentioned Hoarding</fullName>
            </value>
            <value>
                <fullName>Customer mentioned Facebook</fullName>
            </value>
            <value>
                <fullName>Customer mentioned Website</fullName>
            </value>
            <value>
                <fullName>Customer mentioned through Reference</fullName>
            </value>
            <value>
                <fullName>Not Given</fullName>
            </value>
            <value>
                <fullName>Customer did not want car park</fullName>
            </value>
            <value>
                <fullName>Customer was informed +/- car park</fullName>
            </value>
            <value>
                <fullName>Floor</fullName>
            </value>
            <value>
                <fullName>View</fullName>
            </value>
            <value>
                <fullName>Unit No.</fullName>
            </value>
            <value>
                <fullName>Incorrect</fullName>
            </value>
            <value>
                <fullName>Offer Promised, but not mentioned</fullName>
            </value>
            <value>
                <fullName>Offer Not Valid</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Change of Mind</fullName>
            </value>
            <value>
                <fullName>Family Disagreed</fullName>
            </value>
            <value>
                <fullName>Cant Afford</fullName>
            </value>
            <value>
                <fullName>Death in Family</fullName>
            </value>
            <value>
                <fullName>Financial Constraints</fullName>
            </value>
            <value>
                <fullName>Deviation in Carpet Area</fullName>
            </value>
            <value>
                <fullName>Unapproved payment plan</fullName>
            </value>
            <value>
                <fullName>Assured registration at OCR &lt;10% without Bank Sanction</fullName>
            </value>
            <value>
                <fullName>Other Charges not explained</fullName>
            </value>
            <value>
                <fullName>Diffierent Possession Date Communicated</fullName>
            </value>
            <value>
                <fullName>A particular brand committed</fullName>
            </value>
            <value>
                <fullName>Unapprroved amenities</fullName>
            </value>
            <value>
                <fullName>Assured stand alone car park</fullName>
            </value>
            <value>
                <fullName>Informed the rate is inclusive of Car Park</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>